--- a/templates/post.html
+++ b/templates/post.html
@@ -28,7 +28,7 @@
         align-items: center;
         justify-content: center;
     }
-    .post_query_content{
+    .post_query_body{
         margin: 0px 5px 0px;
         text-align: center;
     }
@@ -45,7 +45,11 @@
         height: 34px;
     }
     #post_cnc{
-        
+        height: 50px;
+        padding: 0px 5px 0px 0px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
     }
 </style>
 {% endblock %}
@@ -58,13 +62,13 @@
     </div>
     <div id="post_query">
         <div id="post_query_box">
-            <select class="post_query_content" id="query_type" name="post_query_type" id="post_query_type">
-                <option value="subject">제목</option>
+            <select class="post_query_body" id="query_type" name="post_query_type" id="post_query_type">
+                <option value="title">제목</option>
                 <option value="content">내용</option>
                 <option value="all">제목+내용</option>
             </select>
-            <input class="post_query_content" id="query_content" type="text" placeholder="검색어를 입력하세요.">
-            <input class="post_query_content" id="query_submit" type="submit" value="검색">
+            <input class="post_query_body" id="query_content" type="text" placeholder="검색어를 입력하세요.">
+            <input class="post_query_body" id="query_submit" type="submit" value="검색">
         </div>
     </div>
     <div id="post_cnc">
@@ -76,7 +80,24 @@
         </div>
     </div>
     <div id="post_list">
-        list
+        <table>
+            <thead>
+                <tr>
+                    <th>번호</th>
+                    <th>제목</th>
+                    <th>작성일</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for post in post_list_data %}
+                <tr>
+                    <td>{{ post.postId }}</td>
+                    <td>{{ post.postTitle }}</td>
+                    <td>{{ post.createdTime }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
 </div>
 {% endblock %}
