--- a/templates/post.html
+++ b/templates/post.html
@@ -45,15 +45,18 @@
         height: 34px;
     }
     #post_cnc{
-        height: 50px;
+        height: 60px;
         padding: 0px 5px 0px 0px;
         display: flex;
         align-items: center;
         justify-content: space-between;
     }
+    #post_count{
+        color: #999999;
+    }
     #post_list table{
         width: 100%;
-        max-height: 650px;
+        max-height: 640px;
         border-collapse: collapse; 
         border-top: 2px solid #CD5C5C;
         border-bottom: 2px solid #CD5C5C;
@@ -84,18 +87,17 @@
     <div id="post_query">
         <form id="post_query_box" action="/post" method="post">
             <select class="post_query_body" id="query_type" name="query_type">
-                <option value="title">제목</option>
-                <option value="content">내용</option>
-                <option value="all">제목+내용</option>
+                <option value="title" {% if query_type == "title" %} selected {% endif %}>제목</option>
+                <option value="content" {% if query_type == "content"%} selected {% endif %}>내용</option>
+                <option value="all" {% if query_type == "all"%} selected {% endif %}>제목+내용</option>
             </select>
-            <input class="post_query_body" id="query_content" name="query_content" type="text" placeholder="검색어를 입력하세요.">
+            <input class="post_query_body" id="query_content" name="query_content" type="text" placeholder="검색어를 입력하세요." {% if query_content %}value="{{query_content}}"{% endif %}>
             <input class="post_query_body" id="query_submit" type="submit" value="검색">
-            <p>{{post_query}} </p>
         </form>
     </div>
     <div id="post_cnc">
         <div id="post_count">
-            count = {{ post_cnt }}
+            <p style="margin: 0px;">총 {{ post_cnt }}개의 글이 있습니다.</p> 
         </div>
         <div id="post_create">
             <button>글쓰기</button>
