--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,7 +14,7 @@
     <header>
         <div class="inner" id="header_content">
             <div id="header_left">
-                <h2 style="margin: 0px;">지식 조각</h2>
+                <h2 style="margin: 0px;font-size: 1.3em;">지식 조각</h2>
             </div>
             <!--div id="header_right">
                 <button>로그인</button>
