--- a/templates/post_update.html
+++ b/templates/post_update.html
@@ -60,6 +60,18 @@
         resize: none;
 
     }
+    #update_publish_btn button{
+        width: 70px;
+        height: 30px;
+        text-align: center;
+        border: 0px;
+        border-radius: 5px;
+        background-color: #033468;
+        color: #ffffff;
+    }
+    #update_publish_btn button:hover {
+        background-color: #02162c;
+    }
     
 </style>
 {% endblock %}
