--- a/templates/next.html
+++ b/templates/next.html
@@ -9,6 +9,10 @@
         text-align: center;
         padding: 100px 0px;
     }
+    .next_msg{
+       /*  color: #000; */
+        font-size: 30px;
+    }
     #goto {
         display: flex;
         align-items: center;
@@ -33,8 +37,20 @@
 {% block content %}
 <div id="main_content">
 
+    {% if state == "join" %}
+    <p class="next_msg">회원가입이 완료되었습니다</p>
+    <div id="goto">
+        <form id="user_join_btn" action="{{ url_for('post') }}">
+            <button type="submit">게시판 홈으로</button>
+        </form>
+        <form id="user_join_btn" action="{{ url_for('login') }}">
+            <button type="submit">로그인</button>
+        </form>
+    </div>
+    {% endif %}
+
     {% if state == "create" %}
-    <p style="font-size: 30px;">작성이 완료되었습니다</p>
+    <p class="next_msg">작성이 완료되었습니다</p>
     <div id="goto">
         <form id="post_create_btn" action="{{ url_for('post') }}">
             <button type="submit">게시판 홈으로</button>
@@ -46,7 +62,7 @@
     {% endif %}
 
     {% if state == "update" %}
-    <p style="font-size: 30px;">수정이 완료되었습니다</p>
+    <p class="next_msg">수정이 완료되었습니다</p>
     <div id="goto">
         <form id="post_update_btn" action="{{ url_for('post') }}">
             <button type="submit">게시판 홈으로</button>
@@ -58,7 +74,7 @@
     {% endif %}
 
     {% if state == "delete" %}
-    <p style="font-size: 30px;">삭제가 완료되었습니다</p>
+    <p class="next_msg">삭제가 완료되었습니다</p>
     <div id="goto">
         <form id="post_update_btn" action="{{ url_for('post') }}">
             <button type="submit">게시판 홈으로</button>
@@ -67,7 +83,7 @@
     {% endif %}
 
     {% if state == "delete_check" %}
-    <p style="font-size: 30px;">정말 삭제하시겠습니까?</p>
+    <p class="next_msg">정말 삭제하시겠습니까?</p>
     <div id="goto">
         <form id="post_deleteN_btn" action="{{ url_for('post') }}">
             <button type="submit">아니요 (홈으로)</button>
