--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -1,43 +1,50 @@
-body{
+body {
     margin: 0px auto;
 }
-header{
+header {
     background-color: #033468;
     height: 54px;
     margin: 0px auto;
-    
+
 }
-.inner{
+.inner {
     max-width: 1110px;
-    min-width: 950px; /*800px*/
+    min-width: 950px;    /*800px*/
     height: 100%;
     margin: 0 auto;
     padding: 0 15px;
 }
-#header_content{
+#header_content {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-#header_left{
+#header_left {
     color: #ffffff;
 }
-
-main{
+#header_right a, #header_right p {
+    text-decoration: none;
+    color: #ffffff;
+    
+}
+#header_right a:hover {
+    color: #a3c9f1;
+}
+main {
     height: 1000px;
     margin: 20px auto;
 
 }
-footer{
+footer {
     background-color: #f6f6f6;
     height: 80px;
 }
-#footer_content{
+#footer_content {
     height: 100%;
-    display: flex; 
-    flex-direction: column; /* 세로 방향 정렬 */
-    justify-content: center; /* 부모 높이 내에서 수직 정렬 */
-    align-items: center; /* 가로 정렬 */
+    display: flex;
+    flex-direction: column;    /* 세로 방향 정렬 */
+    justify-content: center;    /* 부모 높이 내에서 수직 정렬 */
+    align-items: center;    /* 가로 정렬 */
     text-align: center;
     color: #454545;
 }
