--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,10 +16,10 @@
             <div id="header_left">
                 <h2 style="margin: 0px;font-size: 1.3em;">지식 조각</h2>
             </div>
-            <!--div id="header_right">
-                <button>로그인</button>
-                <button>회원가입</button>
-            </div-->
+            <div id="header_right">
+                <p><strong><a href="{{ url_for('login') }}">로그인 </a>&nbsp;|&nbsp;<a href="{{ url_for('join') }}"> 회원가입</a></strong></p>
+                <!-- <p><strong><a href="{{ url_for('post') }}">로그인 </a>&nbsp;|&nbsp;<a href="{{ url_for('post') }}"> 회원가입</a></strong></p> -->
+            </div>
         </div>
     </header>
     
