--- a/templates/post_create.html
+++ b/templates/post_create.html
@@ -7,7 +7,7 @@
         background-color: #ffffff;
         width: 100%;
     }
-    a{
+    #path a{
         text-decoration: none;
         color: #353535;
     }
@@ -60,7 +60,18 @@
         resize: none;
 
     }
-    
+    #create_publish_btn button{
+        width: 70px;
+        height: 30px;
+        text-align: center;
+        border: 0px;
+        border-radius: 5px;
+        background-color: #033468;
+        color: #ffffff;
+    }
+    #create_publish_btn button:hover {
+        background-color: #02162c;
+    }
 </style>
 {% endblock %}
 
