--- a/templates/post_update.html
+++ b/templates/post_update.html
@@ -7,7 +7,7 @@
         background-color: #ffffff;
         width: 100%;
     }
-    a{
+    #path a{
         text-decoration: none;
         color: #353535;
     }
