--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,7 +19,7 @@
             </div>
             <div id="header_right">
                 {% if session['user_id'] %}
-                    <p><strong><a href="{{ url_for('logout') }}">로그아웃 </a>&nbsp;|&nbsp;<a href="{{ url_for('my_page') }}"> 마이페이지</a></strong></p>
+                    <p><strong><a href="{{ url_for('logout') }}">로그아웃 </a>&nbsp;|&nbsp;<a href="{{ url_for('mypage') }}"> 마이페이지</a></strong></p>
                 {% else %}
                     <p><strong><a href="{{ url_for('login') }}">로그인 </a>&nbsp;|&nbsp;<a href="{{ url_for('join') }}"> 회원가입</a></strong></p>
                 {% endif %}
