--- a/templates/mypage_update.html
+++ b/templates/mypage_update.html
@@ -57,7 +57,7 @@
         margin: 0px auto;
         padding: 20px 0px;
     }
-    #join_submit button {
+    #mypage_update_submit button {
         width: 90%;
         height: 40px;
         margin: 0px auto;
@@ -68,7 +68,7 @@
         color: #ffffff;
         font-size: 16px;
     }
-    #join_submit button:hover {
+    #mypage_update_submit button:hover {
         background-color: #02162c;
     }
 </style>
@@ -77,64 +77,58 @@
 {% block content %}
 <div id="main_content">
     <div id="join_name">
-        <h1>회원가입</h1>
+        <h1>내 정보 수정</h1>
     </div>
     <div id="join_box">
-        <form action="{{ url_for('join') }}" method="post" onsubmit="return func_submit_chk()">
+        <form action="{{ url_for('mypage_update') }}" method="post" onsubmit="return func_submit_chk()">
             <div id="join_input">
                 <div class="join_input_s" id="join_input_id">
-                    <input id="user_id" type="text" name="user_id" placeholder="아이디" required>
-                    <button id="user_id_chk" type="button" name="btn_action" value="id_chk" onclick="func_user_id_chk()">
-                        &nbsp;중복 확인&nbsp;
+                    <input id="user_id" type="text" name="user_id" placeholder="아이디" required value="{{ user['userId'] }}">
+                    <button id="user_id_chk" type="button">
+                        &nbsp;변경 불가&nbsp;
                     </button>
                 </div>
                 <p id="id_msg" style="width: 90%; margin: 3px auto; text-align: left; font-size: 12px;"></p>
-                <p><input class="join_input_s" type="email" name="user_email" placeholder="이메일" required></p>
-                <p><input class="join_input_s" type="text" name="user_name" placeholder="이름" required></p>
+                <p><input class="join_input_s" type="email" name="user_email" placeholder="이메일" required value="{{ user['userEmail'] }}"></p>
+                <p><input class="join_input_s" type="text" name="user_name" placeholder="이름" required value="{{ user['userName'] }}"></p>
+                <p id="pw_change" style="margin: 3px auto 0px;">
+                    <input type="checkbox" name="is_pw_change" id="is_pw_change">비밀번호 변경
+                </p>
                 <p><input class="join_input_s" type="password" id="user_pw" name="user_pw" placeholder="비밀번호" required></p>
                 <p style="margin-bottom: 0px;"><input class="join_input_s" type="password" id="user_pw_chk" name="user_pw_chk" placeholder="비밀번호 확인" required></p>
                 <p id="pw_msg" style="width: 90%; margin: 3px auto; text-align: left; font-size: 12px;"></p>
-                <p><input class="join_input_s" type="text" name="user_orgn" placeholder="소속" required></p>
-                <p><input class="join_input_s" type="text" name="user_major" placeholder="전공" required></p>
+                <p><input class="join_input_s" type="text" name="user_orgn" placeholder="소속" required value="{{ user['userOrgn'] }}"></p>
+                <p><input class="join_input_s" type="text" name="user_major" placeholder="전공" required value="{{ user['userMajor'] }}"></p>
             </div>
-            <div id="join_submit">
-                <button type="submit" name="btn_action" value="submit"><strong>회원가입</strong></button>
+            <div id="mypage_update_submit">
+                <button type="submit" name="btn_action" value="submit"><strong>수정</strong></button>
             </div>
         </form>
     </div>
 </div>
 
 <script>
-    let is_id_chked = "not_chked"
-    // 아이디 중복 확인
-    function func_user_id_chk() {
-        let user_id = document.getElementById('user_id').value;
-        let id_msg = document.getElementById('id_msg');
+    //userid는 변경 불가하도록
+    let user_id = document.getElementById('user_id')
+    user_id.disabled = true
 
-        // 아이디가 입력됐는지 확인
-        if (!user_id) {
-            id_msg.style.color = 'red';
-            id_msg.textContent = '아이디를 입력해주세요.';
-            return;
+    let user_pw = document.getElementById('user_pw')
+    let user_pw_chk = document.getElementById('user_pw_chk')
+    user_pw.disabled = true
+    user_pw_chk.disabled = true
+
+    //비번 변경 활성화 여부
+    document.getElementById('is_pw_change').addEventListener('change', function() {
+        if (this.checked) {
+            user_pw.disabled = false; // 비번창 활성화
+            user_pw_chk.disabled = false
+        } else {
+            is_pw_change.value = ''; // 비번값 초기화
+            user_pw.disabled = true; // 비번창 비활성화
+            user_pw_chk.disabled = true
+            
         }
-
-        // ajax로 서버에 요청
-        $.ajax({
-            url: '/id_chk',
-            type: 'POST',
-            data: { user_id: user_id }, 
-            success: function(response) {
-                if (response.id_chk == "not_exists") {
-                    id_msg.style.color = 'green';
-                    id_msg.textContent = response["id_msg"];
-                    is_id_chked = "chked"
-                } else {
-                    id_msg.style.color = 'red';
-                    id_msg.textContent = response["id_msg"];
-                }
-            }
-        });
-    }
+    });
 
     // 비밀번호 확인
     function func_user_pw_chk() {
@@ -161,25 +155,6 @@
             user_pw_chk.addEventListener('input', func_user_pw_chk);
         } 
     });
-
-    //아이디 중복 확인했는지 체크
-    function func_submit_chk() {
-        let id_msg = document.getElementById("id_msg");
-        let join_input_id = document.getElementById("join_input_id");
-
-        if (is_id_chked !== "chked") {
-            id_msg.style.color = "red";
-            id_msg.textContent = "아이디 중복 확인이 필요합니다.";
-            join_input_id.style.outline = "2px solid red";
-            return false; // 폼 제출 방지
-        }else{
-            join_input_id.style.outline = ""
-        }
-
-        return true; // 폼 제출 허용
-    }
-
-
 </script>
 
 {% endblock %}
